<resources>
    <string name="app_name">KM Test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email_email_com">email@email.com</string>
</resources>